--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# .DS_Store files
+**/.DS_Store
+
+# raw data folder
+data/raw/
+
+# Rproject files
+*.Rproj
